# MnemBench

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: openai_compatible_adapter.py
mnembench/: __init__.py  __main__.py  cli.py  fixtures.py  report.py  runner.py  scenarios.py  scoring.py  v2_scenarios.py
tests/: __init__.py  test_scoring.py  test_v2_catalog.py
